--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,9 +1,9 @@
 #define STR_HELPER(x) #x
 #define STR(x) STR_HELPER(x)
 
-#define PROJECT_NAME "egamecash"
-#define PROJECT_SITE "http://www.worktips.info"
-#define PROJECT_COPYRIGHT "Copyright 2018, The egamecash Developers"
+#define PROJECT_NAME "EgameLite"
+#define PROJECT_SITE ""
+#define PROJECT_COPYRIGHT "Copyright 2018, The EgameLite Developers"
 #define APP_VER_MAJOR 1
 #define APP_VER_MINOR 0
 #define APP_VER_REV 0
